--- a/ADC_DMA/ADC_DMA.ioc
+++ b/ADC_DMA/ADC_DMA.ioc
@@ -35,7 +35,7 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC2.1.Instance=DMA2_Stream2
+Dma.ADC2.1.Instance=DMA2_Stream3
 Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
 Dma.ADC2.1.Mode=DMA_CIRCULAR
@@ -71,7 +71,7 @@ MxDb.Version=DB.6.0.141
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -117,38 +117,38 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true
-RCC.48MHZClocksFreq_Value=14285714.285714285
-RCC.AHBFreq_Value=25000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=6250000
-RCC.APB1TimFreq_Value=12500000
+RCC.48MHZClocksFreq_Value=22857142.85714286
+RCC.AHBFreq_Value=80000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=40000000
+RCC.APB1TimFreq_Value=80000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=12500000
-RCC.APB2TimFreq_Value=25000000
-RCC.CortexFreq_Value=25000000
-RCC.EthernetFreq_Value=25000000
-RCC.FCLKCortexFreq_Value=25000000
+RCC.APB2Freq_Value=40000000
+RCC.APB2TimFreq_Value=80000000
+RCC.CortexFreq_Value=80000000
+RCC.EthernetFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=25000000
+RCC.HCLKFreq_Value=80000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=25000000
-RCC.PLLCLKFreq_Value=25000000
+RCC.MCO2PinFreq_Value=80000000
+RCC.PLLCLKFreq_Value=80000000
 RCC.PLLM=8
-RCC.PLLN=50
-RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLN=80
 RCC.PLLQ=7
-RCC.PLLQCLKFreq_Value=14285714.285714285
+RCC.PLLQCLKFreq_Value=22857142.85714286
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=25000000
+RCC.SYSCLKFreq_VALUE=80000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=100000000
+RCC.VCOOutputFreq_Value=160000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
